SimpleComplex/Utils 1.x, 2017-08-16
-----------------------------------
- parseJsonString() now removes line comments that begin at line start.

SimpleComplex/Utils 1.x, 2017-08-10
-----------------------------------
- parseJsonString()/parseJsonFile().

SimpleComplex/Utils 1.x, 2017-08-08
-----------------------------------
- ConfigurationException is now a generic exception, usable within other
  packages.

SimpleComplex/Utils 1.x, 2017-08-07
-----------------------------------
- Utils::getType() to get class or type.
- New containerKeys(). And containerIsset/containerGetIfSet now throws exception
  when arg container isn't array|object.
- ArrayAccess BogusArray, for testing behaviour of that stupid interface.

SimpleComplex/Utils 1.x, 2017-08-05
-----------------------------------
- Generic dependency method for listing registered IDs.
- Documentation of known environment-specific IDs; Slim and SimpleComplex.

SimpleComplex/Utils 1.x, 2017-07-20
-----------------------------------
- Cli script find vendor dir fix.

SimpleComplex/Utils 1.x, 2017-07-12
-----------------------------------
- Release 1.0.

SimpleComplex/Utils 1.x, 2017-07-03
-----------------------------------
- ensurePath() return boolean; false if didn't exist.

SimpleComplex/Utils 1.x, 2017-07-02
-----------------------------------
- Ini parsing: suppress PHP error wrongly reported as syntax warning.
- Ini parsing: on error, check if ini content contains 'special' key.
- ParseIniException type.
- Safer CLI exception handler, which catches errors that it itself
  instigates; errors occurring while instantiating container objects.

SimpleComplex/Utils 1.x, 2017-07-01
-----------------------------------
- Added the locale package's locale-text CLI commands to the common CLI script.

SimpleComplex/Utils 1.x, 2017-06-30
-----------------------------------
- .ini parser support string value replacers.
- ctype_digit() is no good when non-string input.